# wasmstation

./: .gitignore  Cargo.toml  LICENSE  README.md  output.cart  watris.disk
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: disk.rs  main.rs
cli/src/template/: Cargo.toml  build.rs  main.rs
core/: Cargo.toml
core/src/: audio.rs  lib.rs  trace.rs  utils.rs
core/src/framebuffer/: blit.rs  line.rs  mod.rs  oval.rs  rect.rs  tests.rs  text.rs
demo/: Cargo.toml
demo/src/: main.rs
desktop/: Cargo.toml
desktop/src/: lib.rs
examples/: cli.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/web-basic/: Cargo.toml  index.html
examples/web-basic/src/: main.rs
src/: gpu_renderer.rs  lib.rs  sdl2_renderer.rs  utils.rs  wasm4.rs  wasmer_backend.rs  wasmi_backend.rs
src/backend/: mod.rs
src/core/: audio.rs  mod.rs  trace.rs  utils.rs  wasm4.rs
src/core/framebuffer/: blit.rs  line.rs  mod.rs  oval.rs  rect.rs  tests.rs  text.rs
src/renderer/wgpu/: shader.wgsl
src/wgpu_renderer/: mod.rs
template/: Cargo.toml  build.rs  main.rs
wasm/: Cargo.toml
wasm/examples/: Makefile  basic.html  basic.wasm  wasmstation.wasm
wasm/src/: lib.rs
wasmer/: Cargo.toml
wasmer/src/: lib.rs
wasmi/: Cargo.toml
wasmi/src/: lib.rs
wasmstation/: Cargo.toml
wasmstation/src/: disk.rs  lib.rs  renderer.rs  utils.rs  wasm4.rs
wasmstation/src/backend/: mod.rs  wasmer.rs
wasmstation/src/console/: audio.rs  fb.rs  mod.rs  trace.rs
wasmstation/src/console/framebuffer/: blit.rs  line.rs  mod.rs  oval.rs  rect.rs  text.rs
wasmstation/src/renderer/: cpu.rs  embedded.rs  embedded_renderer.rs  mod.rs  proxy.rs
wasmstation/src/renderer/gpu/: mod.rs
wasmstation/src/renderer/proxy/: mod.rs
wasmstation/src/renderer/sdl2/: mod.rs
wasmstation/src/renderer/wgpu/: mod.rs  shader.wgsl
web/: Cargo.toml  Makefile  index.html
web/examples/: basic.html  basic.rs
web/src/: lib.rs  main.rs
