[package]
name = "wasmstation"
version = "0.1.0"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>", "Upachler"]
license = "MIT"
repository = "https://github.com/wasmstation/wasmstation"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["demo", "cli"]
default-members = ["cli"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true

[dependencies]
# Core
anyhow = "1.0"
bytemuck = "1.13"
byteorder = "1.4"
log = "0.4"
num-traits = "0.2"

# WasmiBackend
wasmi = { version = "0.29", optional = true }

# sdl2-renderer
sdl2 = { version = "0.35", optional = true }
palette = { version = "0.6", optional = true }

# gpu-renderer
pixels = { version = "0.12", optional = true }
winit = { version = "0.28", optional = true }
pollster = { version = "0.3", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "3.1", default-features = false, features = ["js-default"], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"], optional = true }
cpal = { git = "https://github.com/DouglasDwyer/cpal", features = ["wasm-bindgen"] } # see https://github.com/RustAudio/cpal/pull/774

# NON-WASM-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { git = "https://github.com/DouglasDwyer/cpal" }
wasmer = { version = "3.1", optional = true }

[features]
default = []
wasmer = ["dep:wasmer"]
wasmi = ["dep:wasmi"]
sdl2-renderer = ["dep:sdl2", "dep:palette"]
gpu-renderer = ["dep:winit", "dep:pixels", "dep:pollster", "dep:web-sys"]
