[package]
name = "wasmstation-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
wasmstation = { path = "../wasmstation" }
pretty_env_logger = "0.4"

[[bin]]
name = "wasmstation"
path = "src/main.rs"