[package]
name = "wasmstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
anyhow = "1.0"
bytemuck = "1.12"
num-traits = "0.2"
palette = { version = "0.6", default-features = false, features = ["libm"] }

# wgpu
winit = { version = "0.27", optional = true }
wgpu = { version = "0.14", optional = true }
pollster = { version = "0.2", optional = true }
byteorder = "1.4.3"

# wasmer
wasmer = { version = "3.0", optional = true }

# embedded-graphics
embedded-graphics = { version = "0.7", optional = true }
embedded-graphics-simulator = { version = "0.4", optional = true }

[features]
default = [
    "wasmer-backend", 
    "wgpu-renderer", 
    "embedded-renderer"
] # this is still up for debate obviously
wgpu-renderer = ["wgpu", "winit", "pollster"]
wasmer-backend = ["wasmer"]
embedded = ["embedded-graphics"]
embedded-renderer = ["embedded-graphics-simulator", "embedded"]
# wasm3-backend = []
