[package]
name = "wasmstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
anyhow = "1.0"
bytemuck = "1.12"
num-traits = "0.2"
byteorder = "1.4"
palette = { version = "0.6", default-features = false, features = ["libm"] }

# wasmer-backend
wasmer = { version = "3.0", optional = true }

# embedded
embedded-graphics-core = { version = "0.3", optional = true }

# gpu-renderer
winit = { version = "0.27", optional = true }
wgpu = { version = "0.14", optional = true }
pollster = { version = "0.2", optional = true }

# cpu-renderer
embedded-graphics-simulator = { version = "0.4", optional = true }

[features]
default = ["wasmer-backend", "gpu-renderer", "cpu-renderer"]

wasmer-backend = ["wasmer"]
embedded = ["embedded-graphics-core"]

cpu-renderer = ["embedded-graphics-simulator", "embedded"]
gpu-renderer = ["wgpu", "winit", "pollster"]
