[package]
name = "wasmstation-web"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
wasmstation-core = { path = "../core/" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
wasm-logger = "0.2"
log.workspace = true

[[examples]]
lib = "basic"
crate-type = ["cdylib"]
path = "examples/basic.rs"
