[package]
name = "wasmstation-web"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
log.workspace = true
bytemuck.workspace = true
wasmi = { version = "0.29", default-features = false }
wasmstation-core = { path = "../core/" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"] }


[dev-dependencies]
wasm-logger = "0.2"


[[examples]]
lib = "basic"
crate-type = ["cdylib"]
codegen-units = 1
lto = true
strip = true
path = "examples/basic.rs"
