[package]
name = "wasmstation-web"
edition.workspace = true
version.workspace = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

wasmstation-core = { path = "../core/" }
wasmstation-wasmi = { path = "../wasmi/" }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

