[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmstation = { path = "../..", default-features = false, features = ["wasmi", "gpu-renderer"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
